# skewerchess

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: setup.sh  smoke_test.py
tests/: conftest.py  test_annotate.py  test_api.py  test_concepts.py  test_ingest_lichess.py  test_smoke.py  test_teacher.py  test_train_dataset.py
